--- a/CSS/Landing.css
+++ b/CSS/Landing.css
@@ -297,6 +297,20 @@ p {
         text-align: center;
     }
 
+    #lanslide h2{
+        line-height: .6;
+    }
+
+    #wenslide h2{
+        line-height: .6;
+    }
+
+    #nielide h2{
+        line-height: .6;
+        margin-top:3%;
+        margin-bottom: -5%;
+    }
+
     .symbol-img {
         transform:scale(.7);
         margin:-6.5vh 0 -7vh 0;
@@ -309,6 +323,7 @@ p {
     .clan-slides h2{
         margin-top:-2%;
         margin-bottom: 10%;
+        transform: scale(.8);
     }
 
     #minorslide h2{
@@ -318,7 +333,7 @@ p {
 
     .clan-slides p {
         margin-top:-3vh;
-        font-size:small;
+        font-size:.75em;
     } 
 
     .col.s12 {
